Fixed menu
Fixed button overlapping with menu items. Added dropdown icon as local SVG.

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -729,7 +729,7 @@
 
         .cs-li-link {
             /* 16px - 24px */
-            font-size: clamp(1rem, 2.5vw, 1.5rem);
+            font-size: 1rem;
             line-height: 1.2em;
             text-decoration: none;
             margin: 0;
@@ -1031,6 +1031,7 @@
             align-items: center;
             /* absolutely positioned to be dead center */
             position: absolute;
+            padding: 0 1rem 0 0;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -1045,7 +1046,7 @@
             justify-content: flex-start;
             align-items: center;
             /* 20px - 36px */
-            gap: clamp(1.25rem, 2.6vw, 2.25rem);
+            gap: clamp(.25rem, 2.3vw, 2rem);
         }
 
         .cs-li {
@@ -1059,7 +1060,7 @@
         }
 
         .cs-li-link {
-            font-size: calc(16/16 * 1rem);
+            font-size: calc(14/16 * 1rem);
             font-weight: 300;
             text-transform: uppercase;
             letter-spacing: 2px;
